# surprise-lstm

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/surprise_lstm/: __init__.py  features.py  model.py
